--- a/css/styles.css
+++ b/css/styles.css
@@ -300,3 +300,100 @@ a:hover {
     font-size: 16px;
     color: #666;
 }
+
+/* Portfolio Section */
+.portfolio-container {
+    background-color: #F4F4FD;
+    /* Фон секції */
+}
+
+.portfolio-heading {
+    font-size: 36px;
+    /* Розмір шрифту заголовка */
+    line-height: 1.11;
+    /* Міжрядковий інтервал */
+    letter-spacing: 0.02em;
+    /* Відступ між літерами */
+    text-transform: capitalize;
+    /* Формат тексту */
+    text-align: center;
+    /* Вирівнювання */
+    color: #2e2f42;
+    /* Колір тексту */
+}
+
+.portfolio-list {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+}
+
+.portfolio-item {
+    background-color: #FFFFFF;
+    /* Фон елементів списку */
+}
+
+.portfolio-title {
+    font-size: 20px;
+    /* Розмір шрифту заголовка */
+    line-height: 1.2;
+    /* Міжрядковий інтервал */
+    letter-spacing: 0.02em;
+    /* Відступ між літерами */
+    color: #2e2f42;
+    /* Колір тексту заголовка */
+    font-weight: 500;
+    /* Жирність заголовка */
+}
+
+.portfolio-item p {
+    font-size: 16px;
+    /* Розмір шрифту для тексту */
+    line-height: 1.5;
+    /* Міжрядковий інтервал */
+    letter-spacing: 0.02em;
+    /* Відступ між літерами */
+    color: #434455;
+    /* Колір тексту */
+}
+
+/* Footer Section */
+.footer-container {
+    background-color: #2e2f42;
+    /* Фон футера */
+    text-align: center;
+    padding: 40px 0;
+}
+
+.logo-link {
+    font-family: 'Raleway', sans-serif;
+    /* Шрифт для логотипу */
+    font-weight: 700;
+    /* Жирність */
+    font-size: 18px;
+    /* Розмір шрифту */
+    line-height: 1.17;
+    /* Міжрядковий інтервал */
+    letter-spacing: 0.03em;
+    /* Міжлітерний інтервал */
+    text-transform: uppercase;
+    /* Великі літери */
+    color: #4d5ae5;
+    /* Колір тексту */
+}
+
+.logo-span {
+    color: #f4f4fd;
+    /* Колір тексту для Studio */
+}
+
+.footer-description {
+    line-height: 1.5;
+    /* Міжрядковий інтервал */
+    color: var(--light-background);
+    /* Колір тексту */
+    letter-spacing: 0.02em;
+    /* Відступ між літерами */
+    margin-top: 20px;
+    font-size: 16px;
+}
